src/styles/Quiz.css
.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #7581c3;
    padding: 20px;
    height: 100px;
}

.quiz-container {
    font-family: 'Arial', sans-serif;
    max-width: 700px;
    margin: 0 auto;
    margin-top: 3rem;
    margin-bottom: 3rem;
    padding: 20px;
    background-color: #f7f7fa;
    border-radius: 10px;
    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
}

.website-title {
    padding: 10px 30px;
    margin: 0;
    border-radius: 20px;
    border: 2px solid lightblue;
    font-size: 32px;
    background-color: #293264;
    color: white;
    letter-spacing: 1px;
    cursor: pointer;
}

.quiz-config {
    padding: 10px;
    color: white;
    border-radius: 10px;
    border: 2px solid lightblue;
    background-color: #293264;
}

.quiz-config > p > span {
    text-decoration: underline;
}

.user-name{
    margin-top: 0;
    margin-bottom: 4px;
    font-weight: bold;
    font-size: 18px;
    letter-spacing: 1px;
}

.quiz-topic {
    margin-top: 0;
    margin-bottom: 4px;
    font-weight: bold;
    font-size: 18px;
    letter-spacing: 1px;
}

.quiz-difficulty {
    margin-top: 0;
    margin-bottom: 4px;
    font-weight: bold;
    font-size: 18px;
    letter-spacing: 1px;
}

.prev-next-submit-but-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 50px;
}

.prev-page-but, 
.next-page-but, 
.submit-but,
.start-new-quiz-but {
    padding: 8px 18px;
    border-radius: 16px;
    font-weight: 700;
    color: white;
    border: 1px solid white;
    background-color: #7581c3;
    cursor: pointer;
}

.start-new-quiz-but {
    font-size: 16px;
}


.wish-text, .score-text {
    font-size: 20px;
    font-weight: bold;
    letter-spacing: 1px;
    font-family: "Balsamiq Sans", sans-serif;
    margin: 0;
}
.wish-score-container {
    display: flex;
    justify-content: center;
    margin-bottom: 0;
    background-color: #293264;
    border-radius: 20px;
    color: white;
    padding: 10px;
    font-weight: bold;
    letter-spacing: 1px;
}


.score-text-bottom {
    font-size: 20px;
    font-weight: bold;
    font-family: "Balsamiq Sans", sans-serif;
    padding: 10px 20px;
    background-color: #d9f1f9;
    border: none;
    border-radius: 16px;
}

@media (max-width: 465px) {
    
    .navbar {
        height: 60px;
        padding: 16px;
    }

    .website-title {
        font-size: 20PX;
    }

    .quiz-config {
        padding: 5px;
    }

    .quiz-config > p > span {
        text-decoration: underline;
    }

    .user-name,
    .quiz-topic,
    .quiz-difficulty {
        font-size: 10px;
    }
}

